--- a/templates/components/custom/homepage/product-block-id.html
+++ b/templates/components/custom/homepage/product-block-id.html
@@ -1,6 +1,8 @@
 <div id="{{id}}" class="home-product-block">
     <div class="custom_page-heading-wrapper text-center">
-        <h2 class="page-heading">{{title}}</h2>
+        <div class="heading-h5 custom-home-tilte">
+            <span>{{title}}</span>
+        </div>
     </div>
     <div id="list-{{id}}" class="product-block" data-columns="{{block_columns}}" data-limit="{{block_limit}}" data-dots="false">
         {{> components/custom/homepage/ajax-products-by-list-id list_id=list_id id=id}}
