--- a/templates/components/common/footer.html
+++ b/templates/components/common/footer.html
@@ -109,7 +109,7 @@
         </section>
     </div>
 
-    <div class="footer-copy-right-section">
+    <div class="footer-copy-right-section bg-black">
         <div class="container container-1684">
             {{#if theme_settings.show_copyright_footer}}
                 <div class="footer-copyright flex-between">
