--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -1,6 +1,5 @@
 /* Section Below Home Carousel */
 .custom-section-below-carousel {
-    background-color: #ff5100;
     padding-top: 13px;
     padding-bottom: 16px;
 
@@ -21,10 +20,6 @@
     
         .desc {
             margin-bottom: 0;
-            color: #232323;
-            font-size: 14px;
-            letter-spacing: 0;
-            line-height: 1.5em;
 
             @media (max-width: 1400px) {
                 margin-bottom: 15px;
@@ -122,7 +117,7 @@
                     font-size: 12px;
                     letter-spacing: 0.84px;
                     line-height: 1.5em;
-                    color: #232323;
+                    color: stencilColor("color-textBase");
                     font-weight: 600;
                 }
                 
@@ -135,6 +130,113 @@
             &:hover {
                 .card-buttonGroup {
                     display: block;
+                }
+            }
+        }
+    }
+}
+
+/* Banner Button With text */
+.custom-banner-button-text {
+    margin-top: 29px;
+    padding-top: 14px;
+    padding-bottom: 17px;
+
+    h2 {
+        margin-top: 0;
+        margin-bottom: 4px;
+    }
+}
+
+/* Home Blogs */
+.home-block-post {
+    padding-bottom: 34px;
+    padding-top: 12px;
+
+    h3 {
+        margin: 0;
+    }
+
+    .block-recent-post {
+        .slick-list {
+            margin-left: -5px;
+            margin-right: -5px;
+        }
+        .item {
+            padding: 0 5px;
+            .item-image {
+                .image-with-overlay {
+                }
+            }
+    
+            .item-content {
+                padding: 10px 20px 17px;
+
+                .title {
+                    margin: 0;
+                    
+                    a {   
+                        font-size: 16px;
+                        text-decoration: none;
+                        letter-spacing: 0;
+                        line-height: 1.3125em;
+                    }
+                    
+                }
+                
+                .summary {
+                    color: #8d8d8d;
+                }
+            }
+        }
+    }
+}
+
+/* Home Testimonial */
+.testimonial {
+    padding-top: 20px;
+    padding-bottom: 46px;
+
+    h3 {
+        margin: 0;
+    }
+    .testimonial__content {
+        width: 100%;
+        max-width: 898px;
+        margin: 0 auto;
+        .testimonial__item {
+            padding: 25px 32px 23px 40px;
+            margin-top: 16px;
+            position: relative;
+
+            @media (max-width: 767px) {
+                margin-top: 40px;
+            }
+
+            &::before {
+                content: "";
+                position: absolute;
+                bottom: -55px;
+                left: 40px;
+                border-style: solid;
+                border-width: 30px 20px 30px 20px;
+                border-color: #232323 transparent transparent transparent;
+            }
+
+            .testimonial__desc {
+                margin-bottom: 0;
+            }
+
+            .testimonial__review {
+                margin-top: 5px;
+                .review__list {
+                    margin: 0;
+                }
+                .review__item {
+                    width: 100%;
+                    height: 100%;
+                    max-width: 23px;
+                    max-height: 22px;
                 }
             }
         }
