--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -499,7 +499,17 @@
                 max-width: 778px;
                 background-color: rgba($color: #000000, $alpha: 0.8);
                 position: absolute;
-                left: 0;
+                left: 16px;
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    top: -40px;
+                    left: 65px;
+                    border-style: solid;
+                    border-width: 20px 10px 20px 10px;
+                    border-color: transparent transparent rgba($color: #000000, $alpha: 0.8) transparent;
+                }
 
                 .navPage-subMenu-list {
                     width: 100%;
@@ -524,6 +534,10 @@
                 .navPage-subMenu-item {
                     @media (min-width: 1025px) {
                         position: relative;
+
+                        &.no-subCategory {
+                            margin-bottom: 12px;
+                        }
                     }
 
                     > .navPage-subMenu-action {
@@ -533,6 +547,7 @@
                         line-height: 1.0769em;
                         color: stencilColor("navPages-color-2");
                         border-bottom: 0;
+                        margin-bottom: 0;
 
                         &:hover {
                             color: stencilColor("navPages-color-2-hover");
