--- a/templates/layout/base.html
+++ b/templates/layout/base.html
@@ -87,6 +87,7 @@
         <script src="https://unpkg.com/scrollreveal"></script>
 
         {{> components/custom/global/custom-global}}
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/masonry/4.2.2/masonry.pkgd.min.js"></script>
         
         {{{footer.scripts}}}
     </body>
