Done CSS for Home Page

--- a/assets/scss/layouts/footer/_footer.scss
+++ b/assets/scss/layouts/footer/_footer.scss
@@ -335,6 +335,14 @@
             }
         }
 
+        a {
+            text-decoration: none;
+
+            @media (max-width: 1024px) {
+                display: block;
+            }
+        }
+
         .custom-footer-intro-image {
             @media (min-width: 551px) {
                 display: none;
