--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -73,6 +73,26 @@
 }
 .product-block {
     .productsByListId {
+        .slick-list {
+            margin-left: -8px;
+            margin-right: -8px;
+
+            @media (max-width: 550px) {
+                margin-left: -5px;
+                margin-right: -5px;
+            }
+        }
+
+        .productCarousel-slide {
+            padding-left: 8px;
+            padding-right: 8px;
+
+            @media (max-width: 550px) {
+                padding-left: 5px;
+                padding-right: 5px;
+            }
+        }
+
         .card {
             .card-figure {
                 .card-buttonGroup {
@@ -124,6 +144,10 @@
                 .card-figcaption-button {
                     display: block;
                     text-transform: uppercase;
+
+                    @media (max-width: 550px) {
+                        min-width: 100%;
+                    }
                 }
             }
             
