--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -322,4 +322,34 @@ h1, h2, h3, h4, h5, h6 {
     }
 }
 
+/* Custom Arrow Carousel */
+.slick-slider {
+    .slick-arrow {
+        width: 24px;
+        height: 39px;
+        padding: 0;
+        background-color: transparent;
+        border: none;
+        &.slick-prev::before {
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-image:url('data:image/svg+xml,<svg width="800px" height="800px" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M768 903.232l-50.432 56.768L256 512l461.568-448 50.432 56.768L364.928 512z" fill="%23000000" /></svg>');
 
+            @media (max-width: 1024px) {
+                background-image: url('data:image/svg+xml,<svg viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M768 903.232l-50.432 56.768L256 512l461.568-448 50.432 56.768L364.928 512z" fill="%23ffffff"></path></g></svg>');
+            }
+        }
+
+        &.slick-next::before {
+            width: 100%;
+            height: 100%;
+            background-size: cover;
+            background-image: url('data:image/svg+xml,<svg width="800px" height="800px" viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg"><path d="M256 120.768L306.432 64 768 512l-461.568 448L256 903.232 659.072 512z" fill="%23000000" /></svg>');
+
+            @media (max-width: 1024px) {
+                background-image: url('data:image/svg+xml,<svg viewBox="0 0 1024 1024" class="icon" version="1.1" xmlns="http://www.w3.org/2000/svg" fill="%23000000"><g id="SVGRepo_bgCarrier" stroke-width="0"></g><g id="SVGRepo_tracerCarrier" stroke-linecap="round" stroke-linejoin="round"></g><g id="SVGRepo_iconCarrier"><path d="M256 120.768L306.432 64 768 512l-461.568 448L256 903.232 659.072 512z" fill="%23ffffff"></path></g></svg>');
+            }
+        }
+    }
+}
