Done Home No Effect

--- a/assets/scss/default.scss
+++ b/assets/scss/default.scss
@@ -279,6 +279,51 @@ h1, h2, h3, h4, h5, h6 {
     min-width: 188px;
     text-align: center;
     max-height: 48px;
+    transition: all 0.2s ease-in;
+    position: relative;
+    z-index: 1;
+    overflow: hidden;
+    
+    &:before {
+        content: "";
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%) scaleY(1) scaleX(1.25);
+        top: 100%;
+        width: 140%;
+        height: 180%;
+        background-color: rgba(0, 0, 0, 0.05);
+        border-radius: 50%;
+        display: block;
+        transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+        z-index: -1;
+    }
+    &:after {
+        content: "";
+        position: absolute;
+        left: 55%;
+        transform: translateX(-50%) scaleY(1) scaleX(1.45);
+        top: 180%;
+        width: 160%;
+        height: 190%;
+        border-radius: 50%;
+        display: block;
+        transition: all 0.5s 0.1s cubic-bezier(0.55, 0, 0.1, 1);
+        z-index: -1;
+    }
+
+    &:hover {
+        color: #ffffff;
+    }
+    
+    &:hover:before {
+        top: -35%;
+        transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+    }
+    &:hover:after {
+        top: -45%;
+        transform: translateX(-50%) scaleY(1.3) scaleX(0.8);
+    }
 
     &.btn-large {
         min-width: 259px;
@@ -298,8 +343,21 @@ h1, h2, h3, h4, h5, h6 {
 
         &:hover,
         &:active {
-            color: stencilColor("button--primary-colorHover");
+            &:before {
+                background-color: stencilColor("button--primary-backgroundColorHover");
+            }
+            &:after {
+                background-color: stencilColor("button--primary-backgroundColorHover");
+            }
+        }
+
+        &:after {
             background-color: stencilColor("button--primary-backgroundColorHover");
+        }
+    
+        &:hover {
+            color: stencilColor("button--primary-colorHover");
+            border: 1px solid stencilColor("button--primary-backgroundColorHover");
         }
     }
 
@@ -307,8 +365,23 @@ h1, h2, h3, h4, h5, h6 {
         color: stencilColor("button--default-color");
         background-color: stencilColor("button--default-backgroundColor");
 
+        &:hover,
+        &:active {
+            &:before {
+                background-color: stencilColor("button--default-backgroundColorHover");
+            }
+            &:after {
+                background-color: stencilColor("button--default-backgroundColorHover");
+            }
+        }
+
+        &:after {
+            background-color: stencilColor("button--default-backgroundColorHover");
+        }
+    
         &:hover {
-            background-color: stencilColor("button--default-backgroundColorHover ");
+            color: stencilColor("button--default-colorHover");
+            border: 1px solid stencilColor("button--default-backgroundColorHover");
         }
     }
 
@@ -318,7 +391,6 @@ h1, h2, h3, h4, h5, h6 {
         color: stencilColor("button--disabled-color");
         background-color: stencilColor("button--disabled-backgroundColor");
         border-color: stencilColor("button--disabled-borderColor");
-
     }
 }
 
