--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -49,6 +49,13 @@
 
     .banner-with-text-item {
         margin-bottom: 10px;
+
+        img {
+            transition: transform 0.3s ease;
+        }
+        &:hover img {
+            transform: scale(1.05);
+        }
     }
 }
 
@@ -61,6 +68,28 @@
     
     .slick-banner__item {
         padding: 0 5px;
+
+        .slick-banner__link {
+            position: relative;
+
+            &::after {
+                content: "";
+                width: 100%;
+                height: 100%;
+                background-color: rgba($color: #ffffff, $alpha: 0.2);
+                position: absolute;
+                bottom: -100%;
+                left: 0;
+                transition: bottom 0.4s ease;
+            }
+    
+            &:hover {
+                &::after {
+                    bottom: 0;
+                }
+            }
+        }
+
     }
 }
 
