--- a/templates/components/common/header.html
+++ b/templates/components/common/header.html
@@ -31,7 +31,7 @@
             <div class="container container-1920">
                 <div class="flex-between">
                     <div class="header-top__left flex-align-center">
-                    <a href="#" class="header-top__link flex-align-center">
+                    <a href="#" class="header-top__link flex-align-center custom-animation" data-step-animate="1">
                         <div class="header-top__icon">
                             <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-trade-icon.png" alt="Trade Icon">
                         </div>
@@ -39,7 +39,7 @@
                             {{theme_settings.header-top-left-1}}
                         </span>
                     </a>
-                    <a href="tel:+{{theme_settings.header-top-left-1}}" class="header-top__link flex-align-center">
+                    <a href="tel:+{{theme_settings.header-top-left-1}}" class="header-top__link flex-align-center custom-animation" data-step-animate="2">
                         <div class="header-top__icon">
                             <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-phone-icon.png" alt="Phone Icon">
                         </div>
