--- a/templates/components/common/navigation-list.html
+++ b/templates/components/common/navigation-list.html
@@ -1,9 +1,7 @@
 {{#if children}}
-<a class="navPages-action has-subMenu{{#if is_active}} activePage{{/if}} sr-animate-header"
+<a class="navPages-action has-subMenu{{#if is_active}} activePage{{/if}}"
     href="{{url}}"
     data-collapsible="navPages-{{id}}"
-    data-sr-delay="{{multiply @index 100}}"
-    data-sr-origin="top"
 >
     {{name}}
    <i class="iconMore-action-menu">
