--- a/templates/components/common/navigation.html
+++ b/templates/components/common/navigation.html
@@ -32,7 +32,7 @@
         </li>
 
         <!-- Quote -->
-        <a href="#" class="header-top__link flex-align-center navUser-item">
+        <a href="#" class="header-top__link flex-align-center navUser-item custom-animation" data-step-animate="3">
             <div class="header-top__icon">
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-quote-icon.png" alt="Quote Icon">
             </div>
@@ -42,7 +42,7 @@
         </a>
 
         <!-- Cart -->
-        <li class="navUser-item navUser-item--cart header-top__link">
+        <li class="navUser-item navUser-item--cart header-top__link custom-animation" data-step-animate="4">
             <div class="header-top__icon">
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-cart-icon.png" alt="cart Icon">
             </div>
@@ -61,7 +61,7 @@
         </li>
 
         <!-- Wish List -->
-        <a href="#" class="header-top__link navUser-item  flex-align-center">
+        <a href="#" class="header-top__link navUser-item  flex-align-center custom-animation" data-step-animate="5">
             <div class="header-top__icon">
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-heart-icon.png" alt="Wish List Icon">
             </div>
@@ -89,7 +89,7 @@
         {{/if}}
 
         <!-- Acount -->
-        <li class="navUser-item navUser-item--account header-top__link">
+        <li class="navUser-item navUser-item--account header-top__link custom-animation" data-step-animate="6">
             <div class="header-top__icon">
                 <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/header-top-account-icon.png" alt="Acount Icon">
             </div>
@@ -126,7 +126,7 @@
         </li>
 
         <!-- Search -->
-        <li class="navUser-item header-top__link">
+        <li class="navUser-item header-top__link custom-animation" data-step-animate="7">
             <button class="navUser-action navUser-action--quickSearch"
                type="button"
                id="quick-search-expand"
