--- a/templates/components/common/store-logo.html
+++ b/templates/components/common/store-logo.html
@@ -1,4 +1,4 @@
-<a href="{{urls.home}}" class="header-logo__link sr-animate" data-sr-delay="400" data-sr-origin="bottom" data-header-logo-link>
+<a href="{{urls.home}}" class="header-logo__link" data-header-logo-link>
     {{#if settings.store_logo.image}}
         {{#if theme_settings.logo_size '===' 'original'}}
         <img class="header-logo-image-unknown-size"
