--- a/templates/components/custom/homepage/banner-below-carousel.html
+++ b/templates/components/custom/homepage/banner-below-carousel.html
@@ -1,4 +1,4 @@
-<section class="custom-section-below-carousel bg-main">
+<section class="custom-section-below-carousel bg-main custom-animation" data-step-animate="1">
     <div class="container container-main">
         <div class="section-below-carouse__wrapper flex-between">
             <h3 class="heading-h3 title">GREASE FINDER</h3>
