--- a/templates/components/custom/homepage/banner-button-text.html
+++ b/templates/components/custom/homepage/banner-button-text.html
@@ -1,4 +1,4 @@
-<section class="bg-main custom-banner-button-text">
+<section class="bg-main custom-banner-button-text custom-animation" data-step-animation="1">
     <div class="container container-main">
         <h2 class="heading-h2 uppercase color-body text-center fw-700">Free Technical Audit</h2>
         <p class="section-desc color-white text-center">
