--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -51,10 +51,18 @@
         margin-bottom: 10px;
 
         img {
-            transition: transform 0.3s ease;
+            transition: all 0.4s ease;
         }
-        &:hover img {
-            transform: scale(1.05);
+        .banner-with-text-link {
+            display: block;
+            overflow: hidden;
+        }
+
+        &:hover {
+            img {
+                transform: scale(1.05);
+                filter: brightness(0.7);
+            }
         }
     }
 }
@@ -76,7 +84,7 @@
                 content: "";
                 width: 100%;
                 height: 100%;
-                background-color: rgba($color: #ffffff, $alpha: 0.2);
+                background: linear-gradient(to bottom,transparent 0,rgba(255,255,255,.3) 100%);
                 position: absolute;
                 bottom: -100%;
                 left: 0;
@@ -219,6 +227,19 @@
             padding: 0 5px;
             .item-image {
                 .image-with-overlay {
+                    overflow: hidden;
+                    display: block;
+                }
+
+                img {
+                    transition: all 0.4s ease;
+                }
+                
+                &:hover {
+                    img {
+                        transform: scale(1.05);
+                        filter: brightness(0.7);
+                    }
                 }
             }
     
