--- a/assets/scss/layouts/header/_header.scss
+++ b/assets/scss/layouts/header/_header.scss
@@ -336,6 +336,21 @@
             @media (min-width: 1025px) {
                 position: unset;
             }
+
+
+            #quickSearch {
+                background-color: #232323;
+
+                .form-input {
+                    border-radius: 0;
+                    border: 1px solid #ff5100;
+                    color: #ff5100;
+
+                    &::placeholder {
+                        color: #ff5100;
+                    }
+                }
+            }
         }
 
         .header-top__text {
@@ -364,6 +379,12 @@
                     display: flex;
                     align-items: center;
                 }
+            }
+        }
+
+        .navUser-or {
+            &:hover {
+                color: #ffffff;
             }
         }
     }
@@ -473,6 +494,10 @@
             }
         }
 
+        .header-middle-button {
+            position: relative;
+            z-index: -1;
+        }
         /* CSS for Mega Menu */
         .navPages-item {
             &.has-megamenu {
@@ -494,12 +519,22 @@
             }
         }
         .navPage-subMenu {
+            @media (min-width: 1025px) and (max-width: 1230px) {
+                max-width: 300% !important;
+                flex-direction: column;
+
+                .navPage-subMenu-list {
+                    margin-left: 0;
+                }
+            }
+            
             @media (min-width: $min-1025) {
                 width: 700%;
                 max-width: 778px;
                 background-color: rgba($color: #000000, $alpha: 0.8);
                 position: absolute;
                 left: 16px;
+                z-index: 9;
 
                 &::before {
                     content: "";
@@ -574,6 +609,11 @@
                             max-width: 32px;
                             left: -32px;
                         }
+                    }
+
+                    @media (max-width: 1024px) {
+                        width: 100%;
+                        max-width: 100%;
                     }
                 }
 
