--- a/templates/components/custom/homepage/home-slick-banner.html
+++ b/templates/components/custom/homepage/home-slick-banner.html
@@ -2,17 +2,17 @@
     <div class="container container-main">
         <h5 class="heading-h5 custom-home-tilte"><span>Deals of the Month</span></h5>
         <div class="section-slick slick-banner__list" data-slick-show-desktop="2" data-slick-show-tablet="2" data-slick-show-mobile="1">
-            <div class="slick-banner__item">
+            <div class="slick-banner__item custom-animation" data-step-animate="1">
                 <a href="#" class="slick-banner__link">
                     <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/section-slick-banner-image.png" alt="Slick Banner Image">
                 </a>
             </div>
-            <div class="slick-banner__item">
+            <div class="slick-banner__item custom-animation" data-step-animate="2">
                 <a href="#" class="slick-banner__link">
                     <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/section-slick-banner-image.png" alt="Slick Banner Image">
                 </a>
             </div>
-            <div class="slick-banner__item">
+            <div class="slick-banner__item custom-animation" data-step-animate="3">
                 <a href="#" class="slick-banner__link">
                     <img src="https://cdn11.bigcommerce.com/s-gr2r925k9d/images/stencil/original/image-manager/section-slick-banner-image.png" alt="Slick Banner Image">
                 </a>
