--- a/templates/components/custom/homepage/home-testimonial.html
+++ b/templates/components/custom/homepage/home-testimonial.html
@@ -7,7 +7,7 @@
 
             <div class="testimonial__content grid gap-12">
                 <div class="row">
-                    <div class="col l-2 m-2 s-1">
+                    <div class="col l-2 m-2 s-1 custom-animation" data-step-animate="1">
                         <div class="testimonial__item bg-main-2">
                             <p class="color-white testimonial__desc section-desc">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.
@@ -43,7 +43,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col l-2 m-2 s-1">
+                    <div class="col l-2 m-2 s-1 custom-animation" data-step-animate="2">
                         <div class="testimonial__item bg-main-2">
                             <p class="color-white testimonial__desc section-desc">
                                 Lorem ipsum dolor sit amet, consectetur adipiscing eiusmod tempor incididunt ut labore et dolore ut.
